--- a/week4/april2/blue+green_lee+lee/3Dpaint.cbp
+++ b/week4/april2/blue+green_lee+lee/3Dpaint.cbp
@@ -39,6 +39,7 @@
 			<Add library="comctl32" />
 			<Add library="comdlg32" />
 			<Add library="opengl32" />
+			<Add library="glu32" />
 		</Linker>
 		<Unit filename="childwindow.cpp" />
 		<Unit filename="childwindow.h" />
